# object_detection_app

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci_cd.yaml
backend/: requirements.txt  setup_venv.sh
backend/app/: __init__.py  process_images.py
backend/app/detection/: __init__.py  constants.py  detection.py
build_system/: pyproject.toml
scripts/: download_model.sh
tests/: test_detection.py  test_process_images.py
