[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "object_detection_app"
dynamic = ["version"]
dependencies = [
  "ultralytics==8.3.217"
]
requires-python = ">=3.8"
authors = [
  {name = "Kurchev Sergei"},
  {name = "Ilia Beliakov"},
  {name = "Ilia Kabanov"},
  {name = "Pavel Ivanov"},
]

description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
keywords = ["YOLO", "fse4ai"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]


[project.urls]
Homepage = "https://github.com/iliakabanov/object_detection_app"
Repository = "https://github.com/iliakabanov/object_detection_app.git"
"Bug Tracker" = "https://github.com/iliakabanov/object_detection_app/issues"

[tool.hatch.version]
path = "src/object_detection_app/__init__.py"
